Setup project structure and outline

--- a/presentation.tex
+++ b/presentation.tex
@@ -25,15 +25,35 @@
 	Eindhoven University of Technology
 }
 
-\date{\today}
+\date{March 31, 2015}
 
 \subject{Computing Highly Occluded Paths}
+
+\AtBeginSection[]
+{
+  \begin{frame}
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+  \end{frame}
+}
 
 \begin{document}
 
 	\begin{frame}
 		\titlepage
 	\end{frame}
+
+	\section{Problem}
+	\input{sections/problem}
+
+	\section{Algorithm}
+	\input{sections/algorithm}
+
+	\section{Networks}
+	\input{sections/networks}
+
+	\section{Conclusions}
+	\input{sections/conclusions}
 
 	\begin{frame}{}
 	\end{frame}
