--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -1,5 +1,7 @@
 \begin{frame}{Formal definition}
-
+	\centering
+	\Large
+	Compute a path on a terrain $\Sigma$ between two given points $a, b \in \Sigma$ that can be traversed with minimal risk of exposure to a set $O$ observers on $\Sigma$
 \end{frame}
 
 \subsection{Motivation}
