Add motivation frames

--- a/presentation.tex
+++ b/presentation.tex
@@ -5,6 +5,8 @@
 \usepackage{babel}
 \usepackage{graphicx}
 
+\graphicspath{{img/}}
+
 \beamertemplatenavigationsymbolsempty
 
 \title{Computing Highly Occluded Paths}
