--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -2,6 +2,11 @@
 	\centering
 	\Large
 	Compute a path on a terrain $\Sigma$ between two given points $a, b \in \Sigma$ that can be traversed with minimal risk of exposure to a set $O$ observers on $\Sigma$
+
+	\note{
+		Let's back up for a moment.
+		Why do we want this?
+	}
 \end{frame}
 
 \subsection{Motivation}
