Add note on data structures

--- a/sections/algorithm.tex
+++ b/sections/algorithm.tex
@@ -1,5 +1,9 @@
-\begin{frame}{Data structures}
+\begin{frame}{Data structures}{Continuous model}
 
+\end{frame}
+
+\begin{frame}{Data structures}{Grid DEM}
+	LiDAR
 \end{frame}
 
 \subsection{Forming the model}
