Describe algorithm data structure and model

--- a/sections/algorithm.tex
+++ b/sections/algorithm.tex
@@ -1,9 +1,13 @@
-\begin{frame}{Data structures}{Continuous model}
-
-\end{frame}
-
 \begin{frame}{Data structures}{Grid DEM}
-	LiDAR
+	\only<1> {
+		Recall LiDAR data
+
+		\centering
+		\includegraphics[height=0.5\textheight]{DEM}
+	}
+	\only<2> {
+		We have $\rho > 0, L \geq 0$, $\mathds{M}$ is a square of side length $\rho^{2^L}$, partitioned into $2^L \times 2^L$ grid cells.
+	}
 \end{frame}
 
 \subsection{Forming the model}
