--- a/sections/networks/strategies.tex
+++ b/sections/networks/strategies.tex
@@ -85,7 +85,12 @@
 \end{frame} 
 
 \begin{frame}{Sampling based}
-
+	\begin{itemize}
+		\item Select $m$ grid centers
+		\item Compute the $k$ nearest neighbours
+		\item Use A* to compute the path between each point and neighbours
+		\item Add all segments to the network
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Sampling based}{Result}
@@ -94,7 +99,11 @@
 \end{frame}
 
 \begin{frame}{Topology based}
-
+	\begin{itemize}
+		\item Find boundary values of the coverage map
+		\item Create edges on these 'valleys'
+		\item Add all edges to the network
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Topology based}{Result}
