Move Bart to the next line on the title frame

--- a/presentation.tex
+++ b/presentation.tex
@@ -17,7 +17,7 @@
 \author[Group 10]{
 	Tim van Dalen (0744839)
 	\and
-	Bram Kohl (0746107)
+	Bram Kohl (0746107)\\
 	\and
 	Bart van Wezel (0740608)
 }
