Add first section of new outline, add Occluded paths > Terrain contents

--- a/presentation.tex
+++ b/presentation.tex
@@ -6,9 +6,11 @@
 \usepackage{graphicx}
 \usepackage{dsfont}
 
-\graphicspath{{img/}}
+\graphicspath{{img/}{img2/}}
 
 \beamertemplatenavigationsymbolsempty
+
+\newcommand{\examplewidth}{0.6\textwidth}
 
 \title{Computing Highly Occluded Paths}
 
@@ -46,8 +48,8 @@
 		\titlepage
 	\end{frame}
 
-	\section{Problem}
-	\input{sections/problem}
+	\section{Occluded paths}
+	\input{sections/occludedpaths}
 
 	\section{Algorithm}
 	\input{sections/algorithm}
