Add note on asking questions

--- a/presentation.tex
+++ b/presentation.tex
@@ -48,6 +48,15 @@
 		\titlepage
 	\end{frame}
 
+	\begin{frame}
+		\frametitle{Outline}
+		\tableofcontents
+		\note{
+			Please do not hesitate to ask questions during this lecture.
+			The material we treat will continue to build up, so if any of the earlier stuff isn't clear please just raise your hand.
+		}
+	\end{frame}
+
 	\section{Occluded paths}
 	\input{sections/occludedpaths}
 
