Add observers slides, add macro for example images

--- a/presentation.tex
+++ b/presentation.tex
@@ -5,12 +5,16 @@
 \usepackage{babel}
 \usepackage{graphicx}
 \usepackage{dsfont}
+\usepackage{pgfpages}
+
+\setbeameroption{}
 
 \graphicspath{{img/}{img2/}}
 
 \beamertemplatenavigationsymbolsempty
 
 \newcommand{\examplewidth}{0.6\textwidth}
+\newcommand{\exampleimg}[1]{\includegraphics[width=\examplewidth]{#1}}
 
 \title{Computing Highly Occluded Paths}
 
