Terrain slides use the exampleimg macro

--- a/sections/occludedpaths/terrain.tex
+++ b/sections/occludedpaths/terrain.tex
@@ -22,8 +22,8 @@
 
 \begin{frame}{Example}
 	\centering
-	\only<1>{\includegraphics[width=\examplewidth]{empty}}
-	\only<2>{\includegraphics[width=\examplewidth]{terrain}}
+	\only<1>{\exampleimg{empty}}
+	\only<2>{\exampleimg{terrain}}
 
 	\note{
 		Throughout this lecture, we'll work with a very simple example terrain to make it clear what the algorithm is doing.
