Add proper example images to paths

--- a/sections/occludedpaths/paths.tex
+++ b/sections/occludedpaths/paths.tex
@@ -5,7 +5,8 @@
 \end{frame}
 
 \begin{frame}{Example}
-	\only<1>{\exampleimg{observers_line_of_sight_all}}
-	%TODO: Path on this
-	\only<2>{\exampleimg{observers_line_of_sight_all}}
+	\centering
+	\only<1>{\exampleimg{observers_line_of_sight_all}}%
+	\only<2>{\exampleimg{observers_line_of_sight_all_points}}%
+	\only<3>{\exampleimg{observers_line_of_sight_all_path}}
 \end{frame}
