Add precomputing section

--- a/presentation.tex
+++ b/presentation.tex
@@ -67,7 +67,7 @@
 	\section{Algorithm}
 	\input{sections/algorithm}
 
-	\section{Networks}
+	\section{Precomputing}
 	\input{sections/networks}
 
 	\section{Conclusions}
