--- a/sections/networks.tex
+++ b/sections/networks.tex
@@ -1,10 +1,25 @@
-\subsection{Contributions}
-\input{sections/networks/contributions}
+\begin{frame}{So far...}
+	\centering\Large
+	We now have a scalable algorithm for computing occluded paths, but what if we are interested in a terrain more than once?
+	\pause
 
-\subsection{Computing occluded paths}
-\input{sections/networks/paths}
+	Precomputing!
+	\pause
 
-\subsection{Strategies}
-\input{sections/networks/strategies}
+	\begin{thebibliography}{10}
+		\beamertemplatearticlebibitems
+		\bibitem{agarwal13}
+			Niel~Lebeck, Thomas~M\-olhave, Pankaj~K.~Agarwal
+		\newblock {\em Computing Highly Occluded Paths Using a Sparse Network}.
+		\newblock SIGSPATIAL'14
+	\end{thebibliography}
 
+	\note{You guessed it,}
+\end{frame}
+
+\subsection{Approach}
+\input{sections/networks/approach}
+
+\subsection{Example}
+\input{sections/networks/example}
 
