Add examples to conclusion

--- a/sections/conclusions.tex
+++ b/sections/conclusions.tex
@@ -6,9 +6,35 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{Example}
+	\centering
+	\only<1>{\exampleimg{empty}}%
+	\only<2>{\exampleimg{terrain}}%
+	\only<3>{\exampleimg{observers}}%
+	\only<4>{\exampleimg{observers_visibility}}%
+	\only<5>{\exampleimg{observers_line_of_sight}}%
+	\only<6>{\exampleimg{observers_line_of_sight_one}}%
+	\only<7>{\exampleimg{observers_line_of_sight_all}}%
+	\only<8>{\exampleimg{observers_line_of_sight_all_points}}%
+	\only<9>{\exampleimg{observers_line_of_sight_all_path}}
+\end{frame}
+
 \begin{frame}{Conclusions}{Computing Highly Occluded Paths Using a Sparse Network}
 	\begin{itemize}
 		\item Preprocessing
 		\item Still valid solutions
 	\end{itemize}
+\end{frame}
+
+\begin{frame}{Example}
+	\centering
+	\only<1>{\exampleimg{network1}}%
+	\only<2>{\exampleimg{network2}}%
+	\only<3>{\exampleimg{network3}}%
+	\only<4>{\exampleimg{network4}}%
+	\only<5>{\exampleimg{network5}}%
+	\only<6>{\exampleimg{network6}}%
+	\only<7>{\exampleimg{network_example1}}%
+	\only<8>{\exampleimg{network_example2}}%
+	\only<9>{\exampleimg{network_example3}}
 \end{frame}
