Add new scalable section

--- a/presentation.tex
+++ b/presentation.tex
@@ -64,8 +64,8 @@
 	\section{Occluded paths}
 	\input{sections/occludedpaths}
 
-	\section{Algorithm}
-	\input{sections/algorithm}
+	\section{Making it scale}
+	\input{sections/scalable}
 
 	\section{Precomputing}
 	\input{sections/networks}
