--- a/sections/bonus.tex
+++ b/sections/bonus.tex
@@ -1,3 +1,8 @@
+\begin{frame}{Bonus}{Running time viz map}
+	\centering\Large
+	`We compute a visibility map at a reasonable level of approximation of a terrain with 144 million points in about 40 seconds'
+\end{frame}
+
 \begin{frame}{Bonus}{Running time learning based network generation}
 	\[
 		O(n * m * \textnormal{pathfinding alg})
