Meer plaatjes en plaatjes aangepast

--- a/sections/networks.tex
+++ b/sections/networks.tex
@@ -14,7 +14,13 @@
 		\newblock SIGSPATIAL'14
 	\end{thebibliography}
 
-	\note{You guessed it,}
+	\note{So now we have found a scalable algorithm for computing occluded paths. 
+However finding an occluded path on the visualization map is not really fast.
+When we want to compute a lot of occluded paths on a terrain, we can use pre computing.
+This is mainly the case with real terrain data and in video games. 
+Real terrain data does not change much. Mountains do not move.
+In video games the terrain is predefined and does not change at all.
+}
 \end{frame}
 
 \subsection{Approach}
