--- a/sections/networks/example.tex
+++ b/sections/networks/example.tex
@@ -1,13 +1,22 @@
-\begin{frame}{Constructing the network}
+\begin{frame}{Learning based approach step 1}
 	\centering
 	\only<1>{\exampleimg{network1}}%
 	\only<2>{\exampleimg{network2}}%
 	\only<3>{\exampleimg{network3}}%
-	\only<4>{\exampleimg{network4}}%
-	\only<5>{\exampleimg{network5}}%
-	\only<6>{\exampleimg{network6}}
+	\only<4>{\exampleimg{network4}}
 \end{frame}
 
+\begin{frame}{Learning based approach step 2}
+	\centering
+	\only<1>{\exampleimg{network5}}
+
+\end{frame}
+
+\begin{frame}{Learning based approach step 3}
+	\centering
+	\only<1>{\exampleimg{network6}}
+
+\end{frame}
 \begin{frame}{Finding a path for points A, B}
 	\centering
 	\only<1>{\exampleimg{network_example1}}%
