Add some notes on motivation

--- a/sections/occludedpaths/motivation.tex
+++ b/sections/occludedpaths/motivation.tex
@@ -4,6 +4,8 @@
 	\vspace{0.5cm}
 	\centering
 	\includegraphics[width=0.5\textwidth]{motivation-military}
+	
+	\note{Afghanistan, viz map, occluded path, troops}
 \end{frame}
 
 \begin{frame}{City planning}
@@ -12,6 +14,8 @@
 	\vspace{0.5cm}
 	\centering
 	\includegraphics[width=0.55\textwidth]{motivation-city}
+	
+	\note{Assume not popular recent game, but civic. Trees.}
 \end{frame}
 
 \begin{frame}{Virtual environments}
