Resize images for 169

--- a/sections/networks/approach.tex
+++ b/sections/networks/approach.tex
@@ -48,7 +48,8 @@
 	}
 \end{frame}
 
-\begin{frame}{Example networks}
+\begin{frame}
+ 	\centering
 	\only<1>{\exampleimg{network_fail}}%
 	\only<2>{\exampleimg{network_fail2}}%
 	\only<3>{\exampleimg{network_fail3}}
