--- a/presentation.tex
+++ b/presentation.tex
@@ -1,4 +1,4 @@
-\documentclass[english,aspectratio=43]{beamer}
+\documentclass[english,aspectratio=169]{beamer}
 
 \usetheme{Dresden}
 
@@ -7,13 +7,13 @@
 \usepackage{dsfont}
 \usepackage{pgfpages}
 
-\setbeameroption{}
+\setbeameroption{show notes on second screen}
 
 \graphicspath{{img/}{img2/}}
 
 \beamertemplatenavigationsymbolsempty
 
-\newcommand{\examplewidth}{0.6\textwidth}
+\newcommand{\examplewidth}{0.4\textwidth}
 \newcommand{\exampleimg}[1]{\includegraphics[width=\examplewidth]{#1}}
 
 \title{Computing Highly Occluded Paths}
