Add grid-5 image

--- a/sections/scalable/map.tex
+++ b/sections/scalable/map.tex
@@ -23,6 +23,7 @@
 	\only<4>{\exampleimg{grid-2}}%
 	\only<5>{\exampleimg{grid-3}}%
 	\only<6>{\exampleimg{grid-4}}%
+	\only<7>{\exampleimg{grid-5}}%
 \end{frame}
 
 \begin{frame}{Computing the map}
